--- a/src/components/Heading/heading.css
+++ b/src/components/Heading/heading.css
@@ -1,21 +1,37 @@
 .heading {
-  /* Stlyes... */
+  width: 100%;
+  height: 25vh;
+  position: relative;
+  background-color: var(--desaturated-dark-cyan);
+  background-image: url("https://62c72eafa62d662dada6d634--superb-hotteok-e84f4d.netlify.app/images/bg-header-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin: 0 0 5rem 0;
 }
 
 .heading__input {
-  display: flex;
-  width: 100%;
+  width: 80vw;
+  height: 4rem;
   max-width: 100%;
-  padding-left: 14px;
+  position: absolute;
+  top: 85%;
+  left: 0;
+  right: 0;
+  display: grid;
+  place-content: center;
+  grid-template-columns: 1fr 0.2fr;
+  margin: 0 auto;
   border-radius: 5px;
-  color: black;
+  background-color: var(--pure-white);
+  box-shadow: 0 0 50px var(--desaturated-dark-cyan-shadow);
 }
 
 .heading__input input {
   width: 100%;
   min-width: 50%;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   padding: 14px;
   padding-left: 14px;
   overflow: hidden;
@@ -26,25 +42,77 @@ input:focus {
   outline: none;
 }
 
+.heading__tags {
+  display: flex;
+  padding: 0 1rem;
+}
+
 .heading__input-tag {
   display: flex;
   align-items: center;
-  margin: 7px 0;
-  margin-right: 10px;
-  padding: 0 10px;
-  padding-right: 5px;
-  border: 1px solid orange;
+  margin: 1rem;
+  padding: 0.3rem 3rem 0.3rem 1rem;
   border-radius: 5px;
-  background-color: orange;
-  white-space: nowrap;
-  color: white;
+  background-color: var(--light-grayish-cyan);
+  color: var(--desaturated-dark-cyan);
+  overflow: hidden;
+  position: relative;
 }
 
 .heading__input-tag button {
   display: flex;
-  padding: 6px;
+
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0.5rem;
+
   border: none;
-  background-color: unset;
-  cursor: pointer;
-  color: white;
+  background-color: var(--desaturated-dark-cyan);
+  color: var(--pure-white);
+}
+.heading__input-tag button:hover {
+  background: var(--very-dark-grayish-cyan);
+}
+
+.heading__clear {
+  grid-column: 2;
+  border: none;
+  background: none;
+  color: var(--desaturated-dark-cyan);
+  font-weight: 700;
+}
+
+.heading__clear:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 375px) {
+  .heading {
+    min-height: 212px;
+    height: fit-content;
+    background-image: url(https://62c72eafa62d662dada6d634--superb-hotteok-e84f4d.netlify.app/images/bg-header-mobile.svg);
+    margin: 0 0 5rem 0;
+  }
+
+  .heading__input {
+    top: 70%;
+    height: min-content;
+  }
+
+  .heading__tags {
+    display: block;
+  }
+  .heading__input-tag {
+    display: inline-block;
+    margin: 0.8rem 0.8rem 0.3rem 0;
+    max-width: 90px;
+    min-width: 10px;
+    width: fit-content;
+    padding: 0.3rem 2.2rem 0.3rem 0.7rem;
+  }
 }
